# autogen-playground

./: pyproject.toml  run
coding/: fetch_nvda_news.py  fetch_nvda_stock_data.py  fetch_nvidia_stock_data.py  fetch_recent_nvda_news.py  plot_stocks.py
scripts/1conversation/: tutorial1.py  tutorial2.py  tutorial3.py  tutorial4.py
scripts/2sequential_chat/: tutorial1.py
scripts/3reflection/: tutorial1.py  tutorial2_critic.py  tutorial3_nested.py
scripts/4tools/: tutorial1.py  tutorial2.py
scripts/5coding/: tutorial1.py  tutorial2.py
scripts/6group_chat/: tutorial1.py  tutorial2.py
